<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/throw_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/throw_btn"
        android:textAllCaps="false"
        android:paddingHorizontal="60dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/montserratsemibold"
        android:textColor="@color/white"
        android:stateListAnimator="@null"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.298">

        <TableRow
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/dice1"
                android:background="#00000000"
                app:srcCompat="@drawable/white1" />

            <ImageButton
                android:id="@+id/dice2"
                android:layout_marginHorizontal="30dp"
                android:background="#00000000"
                app:srcCompat="@drawable/white2" />

            <ImageButton
                android:id="@+id/dice3"
                android:background="#00000000"
                app:srcCompat="@drawable/white3" />

        </TableRow>

        <TableRow
            android:layout_height="139dp"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/dice4"
                android:background="#00000000"
                app:srcCompat="@drawable/white4" />

            <ImageButton
                android:id="@+id/dice5"
                android:background="#00000000"
                app:srcCompat="@drawable/white5" />

            <ImageButton
                android:id="@+id/dice6"
                android:background="#00000000"
                app:srcCompat="@drawable/white6" />
        </TableRow>
    </TableLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/rounds_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rounds_left"
            android:textColor="@color/dark_gray"
            android:textSize="20sp"
            android:fontFamily="@font/montserratsemibold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nr_of_rounds_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserratblack"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rounds_left"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/throw_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">


        <!-- child view -->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/throw_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sum8_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/sum_choice_bg"
                android:backgroundTint="@color/light_gray"
                android:fontFamily="@font/montserratblack"
                android:text="@string/sum_8"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sum9_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/sum_choice_bg"
                android:backgroundTint="@color/light_gray"
                android:fontFamily="@font/montserratblack"
                android:text="@string/sum_9"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sum10_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/sum_choice_bg"
                android:backgroundTint="@color/light_gray"
                android:fontFamily="@font/montserratblack"
                android:text="@string/sum_10"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sum11_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/sum_choice_bg"
                android:backgroundTint="@color/light_gray"
                android:fontFamily="@font/montserratblack"
                android:text="@string/sum_11"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sum12_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/sum_choice_bg"
                android:backgroundTint="@color/light_gray"
                android:fontFamily="@font/montserratblack"
                android:text="@string/sum_12"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/low_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/sum_choice_bg"
                android:backgroundTint="@color/light_gray"
                android:fontFamily="@font/montserratblack"
                android:text="@string/sum_low"
                android:textSize="16sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sum4_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/sum_choice_bg"
                android:backgroundTint="@color/light_gray"
                android:fontFamily="@font/montserratblack"
                android:text="@string/sum_4"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sum5_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/sum_choice_bg"
                android:backgroundTint="@color/light_gray"
                android:fontFamily="@font/montserratblack"
                android:text="@string/sum_5"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sum6_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/sum_choice_bg"
                android:backgroundTint="@color/light_gray"
                android:fontFamily="@font/montserratblack"
                android:text="@string/sum_6"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sum7_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/sum_choice_bg"
                android:backgroundTint="@color/light_gray"
                android:fontFamily="@font/montserratblack"
                android:text="@string/sum_7"
                android:textSize="24sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">


        <TextView
            android:id="@+id/throws_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratsemibold"
            android:textColor="@color/dark_gray"
            android:text="@string/throws_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nr_of_throws_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserratblack"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/throws_left"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/restart_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#00BEA1A1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_replay_24" />


</androidx.constraintlayout.widget.ConstraintLayout>